<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adres"
        android:textSize="18sp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical" />

    <EditText
        android:id="@+id/addressTextField"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wprowadz_adres"
        android:textSize="18sp" />

</LinearLayout>

    <Button
        android:id="@+id/getInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@color/light_gray"
        android:text="@string/pobierz_informacje" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rozmiar_pliku"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/fileSizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typ_pliku"
            android:textSize="18sp"
            android:layout_marginRight="48dp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/fileTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginRight="10dp" />


    </LinearLayout>


    <Button
        android:id="@+id/getFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@color/light_gray"
        android:text="@string/pobierz_plik" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_weight="1"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pobrano bajtów:"
            android:textSize="18sp"
            android:layout_marginRight="-10dp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/downloadedBytesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginRight="10dp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:max="100"
        android:progress="0" />

</LinearLayout>
</ScrollView>